Refactor maven project structure